@startuml Diagramm
struct temperaturePausesStruct{
    byte setpointTemperature[6]
    int16_t time[6]
}

struct parametrs
{
    parametrs(const bool &timeSet, const bool &timeDelay, const byte &powerMax, const byte &powerMin, const float &calibr, const byte &predel);
    parametrs() {}
    bool _timeSet;
    bool _timeDelay;
    byte _powerMax = 255, _powerMin = 0, _predel = 101;
    float _calibr = 0;
};

class LCD{
    LCD();
    void ini();
    void ConnectToWifi(const bool &connect);
    void Connecting();
    void ClearAll();
    void WriteOnLcdPause(const Pair<byte, uint16_t> &pause, const byte &numberPause);
    void WriteTemperature(const float &temperature);
    void Clear(const byte &curs);
    const void ClearLcd() { lcd.clear(); }
    void settingsMainMenu(const byte &parametr);
    void WiFi(const bool &parametr);
    void PowerLimits(const byte &parametr, const byte &minLimit, const byte &maxLimit, const byte& limitTemp);
    void PrintLimitMenu(const byte &parametr, const byte &limit);
    void TimeSettings(const bool &parametr);
    void TimeConcrete(const bool &parametr, const bool &value);
    void NumberProg(const byte &numberProgramm);
    void EnterTemperaturePause(byte numberProgramm, byte step, const bool &parametr, const byte &temperature, const uint16_t &time, const bool& parametrTime);
    void BaseSettings(const bool &parametr);
    void stopProgramm();
    void startProgramm();
    void mainMenu(const int &temperature, const byte &number);
    void mainMenu(const int &temperature, const byte &number, const byte max, const byte &min, const bool &delay, const bool &set);
    void workProgramm(const int &setpointTemperature, const float &temperature, const byte &numberPause, const uint32_t &time, const bool& timeParametr);
    void TuneBaseSettings(const byte &parametr);
    void TuneBaseSettings(const byte &parametr, const bool &choise);
    void TuneBaseSettings(const byte &parametr, const float &calib);
    void Tuning(const byte &temperatureMax);
    void TuningProcces(const byte &percent, const byte &temperatureNow);
    void SuccessConection(const bool& status);
}

class TRM{
    byte _upButton, _downButton, _numberButton, _motorPin, numberPause = 0;
    byte predel_temperature = 101;

    ProgrammRunner runner;
    TemperaturePauseCollector collector;
    MyButton settingsButton, startStopButton, motorButton;
    MyThermoCouple termoCouple;

    bool timeSet = false;
    bool timeDelay = false;

    float calib_value = 0;

    LCD lcd;
    PIDRegulator regulator;
    TRM(const byte &dwnBtn, const byte &upBtn, const byte &setBtn, const byte &strtBtn,
        const byte &nmbBtn, const byte &mtrBtn, const byte &mtrPin, const byte &sckPin, const byte &csPin, const byte &soPin);

    void ini();
    void main_programm();
    byte getPIDvalue();
    byte getPIDvalueTune() const;
    float getTemperature();
    float getCalibrationValue() const;
    void enterCalibrationValue(const float &value);
    byte getPredelTemperature() const;
    void enterPredelTemperature(const byte &predel);
    byte get_number_prog() const { return numberPause; }
    void start_program_from_server(const bool &start);
    void stop_program_from_server(const bool &stop);
    void put_number_prog(const byte &number);
    Fouth<bool, bool, byte, byte> getParametrs() const;
    void save_parametrs_time(const byte &what, const bool &value);
    void save_parametrs_power(const byte &what, const byte &value);
    byte getNumberPause() const;
    void enterTemperaturePauses();
    void settings();
    void motorOn();
    void startProgramm();
    void runningProgramm();
    void tunningProgramm();
    void printMainMenu(const int &temperatureNew);
    void WiFiConnect(); // Подключение к wifi
    void saveParametrs();
    void loadParametrs();
    void baseParametrs();
    void chooseNumberPause();
    void tuningPID();
};
}

class TemperatureProgramm{
    temperaturePausesStruct _pausesStruct;
    TemperatureProgramm(const temperaturePausesStruct& pauses)//создание объекта, хранящего только структуру
    TemperatureProgramm(const int& adress)//создание обекта с ячейкой (чтобы он прочитал прог-му из ячейки)
    Pair<byte, uint16_t> readPause(const byte& pause)//получить паузу из программы
    void writePauses(char temp[6], uint16_t times[6])//записать программу, передав ей массивы(отказ-ся)
    void writePauses(const temperaturePausesStruct& structWrite)//запись программы ч-з стр-ру
    void writePauses(const byte& adress, const temperaturePausesStruct& structWrite);//запись с дальнейшим сохранением
    temperaturePausesStruct getPauseAll()//получить программу
    void savePauses(const int& adress)//сохранить программу в ячейку
}

class TemperaturePauseCollector{
    byte _numberProgramms[7] = {0, 1, 2, 3, 4, 5, 6};
    byte _adress[7] = {0, 35, 70, 105, 140, 175, 210};
    TemperaturePauseCollector();
    void writePauses(const byte& numberProgramm, const temperaturePausesStruct& pause) //запись программы под номером и передача стр-ры в программу
    Pair<byte, uint16_t> readPause(const byte& numberProgramm, const byte& numberPause)//получить одну паузу и программы
    temperaturePausesStruct getPause(const byte& numberProgramm)//получить программу полностью
}

class ProgrammRunner{
    temperaturePausesStruct programm_;
    bool timeSet = false;
    bool timeDelay = false;
    bool startTime = false;
    bool can_to_start = false;
    bool is_stopped = false;
    uint16_t timer = millis();
    uint16_t ticker = 0;
    byte numberPause = 0;
    ProgrammRunner(const temperaturePausesStruct &programm, const bool &time, const bool &delay);
    ProgrammRunner(const bool &time, const bool &delay);
    ProgrammRunner();
    void putTimeSet(const bool &time);
    void putTimeDelay(const bool &delay);
    void putTimeSettings(const bool &time, const bool &delay);
    void putProgramm(const temperaturePausesStruct &programm);
    bool is_programm_run() const;
    void programm_stop();
    void startPause();
    Third<byte, uint32_t, byte> runningProgramm(const float &temperature);
}


struct Koefficients{
    unsigned int P = 0
    unsigned int I = 0
    unsigned int D = 0
}

class PIDRegulator{
    Koefficients koefficients;  //стуктура с коэффициентами
    GyverPID regulator;
    byte _setpointTemperature = 0;  //для указания температуры уставки
    PIDRegulator()  //чтение из EEprom ПИД коэфф-ов и инициализация ПИД регулятора Gyver
    void const setLimits(const byte& minValue, const byte& maxValue) //установка лимитов
    void const putTemperature(const byte& temperature)  //Ввод температуры уставки
    int getValuePID(const float& temperatureIsTermoCouple)  //получение результата после передачи температуры
}



class GyverPID{
    datatype setpoint = 0;     // заданная величина, которую должен поддерживать регулятор
    datatype input = 0;        // сигнал с датчика (например температура, которую мы регулируем)
    datatype output = 0;       // выход с регулятора на управляющее устройство (например величина ШИМ или угол поворота серво)

    datatype getResult();      // возвращает новое значение при вызове (если используем свой таймер с периодом dt!)
    datatype getResultTimer(); // возвращает новое значение не ранее, чем через dt миллисекунд (встроенный таймер с периодом dt)
    void setDirection(boolean direction);    // направление регулирования: NORMAL (0) или REVERSE (1)
    void setMode(boolean mode);              // режим: работа по входной ошибке ON_ERROR (0) или по изменению ON_RATE (1)
    void setLimits(int min_output, int max_output);    // лимит выходной величины (например для ШИМ ставим 0-255)
    void setDt(int16_t new_dt);              // установка времени дискретизации (для getResultTimer)
    float Kp = 0.0;
    float Ki = 0.0;
    float Kd = 0.0;
}

class MyButton{
    bool _flag = false;
    byte _pin;
    uint32_t _tmr = 0;
    MyButton(const byte &pin);
    MyButton(){}
    void ini(const byte &pin);
    bool Clicked();
    bool Pressed();
}

class MyThermoCouple{
    byte sck, so, cs;
    float calib_value = 0;
    uint8_t spiread();
    uint32_t _tmr = millis();
    MyThermoCouple(const byte& SCK, const byte& CS, const byte& SO);
    MyThermoCouple();
    void ini(const byte& SCK, const byte& CS, const byte& SO);
    float ReadCelsius();
    float ReadFahrenheit();
    float ReadFarenheit();
    void Calibration(const float& value);
    float GetCalibValue() const;
}
TRM--*ProgrammRunner
TRM--*LCD : создает
TRM --* PIDRegulator : Создает
TRM --* parametrs : используется для сохранения
TemperaturePauseCollector --* temperaturePausesStruct
TemperatureProgramm --* temperaturePausesStruct
PIDRegulator --* Koefficients : Создает из EEprom
PIDRegulator --* GyverPID : Создает для расчетов
TRM--*MyButton : Создает (up, down, number, start/stop, motor)
TRM--*MyThermoCouple : Создает
TRM--*TemperaturePauseCollector: Создает
TemperatureProgramm *--TemperaturePauseCollector:Создает каждый раз при работе с паузами
@enduml